2013-08-01 Paolo Mantegazza <mantegazza@aero.polimi.it>

        * base/include/asm-x86/rtai_sched_32.h, rtai_sched_64.h and 
	  rtai_sched.h: removed and gathered code common to 64 and 32 into 
	  rtai_sched.h.

2013-07-30 Paolo Mantegazza <mantegazza@aero.polimi.it>

        * base/ipc/msg/msg.c: tightened task and message copying pointer
	  checks.

2013-07-29 Paolo Mantegazza <mantegazza@aero.polimi.it>

        * base/ipc/netrpc/netrpc.c added a missing kclose for x86_64.

2013-07-26 Pierangelo Masarati <masarati@aero.polimi.it>

	* change the making of the schedulers, finally we got rid of a useless
	  double creation of the same scheduler; now the only real scheduler
	  is rtai_sched, legacy is saved by linking lxrt, ksched, up, mup and
	  smp to it.

2013-07-26 Paolo Mantegazza <mantegazza@aero.polimi.it>

        * base/arch/x86/hal/hal.c and hal_32.c: fixed TSC sync support, broken
	  because of both the new x86 unified making and the need to avoid 
	  using kernel_thread(...) directly.

2013-07-25 Pierangelo Masarati <masarati@aero.polimi.it>

	* change making configuration so to not include Linux headers for user 
	  space code; it made GCC >= 4.7.2 yell for conflicting definitions 
	  within the same headers; it does not break under older GCCs, which
	  did not yell.

2013-07-25 Paolo Mantegazza <mantegazza@aero.polimi.it>

        * addons/rtdm/module.c: fix the changed name of the isr scheduler lock.
        * base/sched/api.c: opt for a randomization in generating names for 
	  NULL adr requests (pevious nameseed way kept under #if #else #endif).
        * base/sched/sched.c: make rtai_isr_sched_handle available and
	  exported always.
        * base/arch/x86/hal/hal.c: moved random number generator to 
	  base/include/rtai.h, so to have it available anywhere.
        * base/include/rtai.h: put the random number generator here, so to 
	  have it available anywhere.
        * base/include/rtai_nam2num.h: echo a "|null|" for names that are 